packages/otupy/otupy-1.1.12.tar.gz/otupy-1.1.12/validation/openc2-cbor-samples/tests/responses/bad/unknown_field.cbor
£fstatusÈkstatus_textbOKjcommand_idx$77c844b1-a2ec-43b4-803d-e8f57a1e5a99